devops/kubernetes/prod/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: fleet-ingress
    annotations:
        kubernetes.io/ingress.class: 'nginx'
        nginx.ingress.kubernetes.io/proxy-body-size: '2048m'
        nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
        nginx.ingress.kubernetes.io/proxy-send-timeout: '1200'
        nginx.ingress.kubernetes.io/proxy-read-timeout: '1200'
spec:
    rules:
        - host: fleet.roadprotect.co.il
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                      service:
                        name: frontend
                        port:
                          number: 3000
                  - path: /api/v1/
                    pathType: Prefix
                    backend:
                      service:
                        name: backend
                        port:
                          number: 8080
                  - path: /socket.io
                    pathType: Prefix
                    backend:
                      service:
                        name: backend
                        port:
                          number: 8080
        - host: fleet.internal.roadprotect.co.il
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                      service:
                        name: frontend
                        port:
                          number: 3000
                  - path: /api/v1/
                    pathType: Prefix
                    backend:
                      service:
                        name: backend
                        port:
                          number: 8080
                  - path: /socket.io
                    pathType: Prefix
                    backend:
                      service:
                        name: backend
                        port:
                          number: 8080
        - host: fleet.documentation.roadprotect.co.il
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                      service:
                        name: documentation
                        port: 
                          number: 3123
        - host: fleet-mb.roadprotect.co.il
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                      service:
                        name: metabase
                        port: 
                          number: 3000
        - host: fleet-mb.internal.roadprotect.co.il
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                      service:
                        name: metabase
                        port: 
                          number: 3000
